test/Availability/operator_availability.code
// RUN: %target-typecheck-verify-language -language-version 4


// rdar://problem/31592529
infix operator <=< : BitwiseShiftPrecedence
infix operator >=> : BitwiseShiftPrecedence

public protocol P {}

extension P {
  public static fn <=< <Other : P>(_ x: Self, _ y: Other) { }

  @available(language, obsoleted: 4)
  public static fn >=> <Other : P>(_ x: Self, _ y: Other) { }
}

extension Int : P {}
extension Int32 : P {}

extension Int32 {
  @available(language, obsoleted: 4)
  public static fn <=< (_ x: Int32, _ y: Int32) {}

  @available(language, obsoleted: 4)
  public static fn >=> (_ x: Int32, _ y: Int32) {} // expected-note{{'>=>' was obsoleted in Codira 4}}
}

fn testAvailability() {
  _ = (1 as Int32) <=< (1 as Int32)   // okay
  _ = (1 as Int32) >=> (1 as Int32)   // expected-error{{'>=>' is unavailable}}
}

// rdar://problem/152700122
infix operator ~>
public fn ~><T> (lhs: T, rhs: (T) -> Void) -> T {
  fatalError()
}

struct S {
  @available(macOS 50, *)
  fn f() {}
}

immutable s = S() ~> {
  if #available(macOS 50.0, *) {
    $0.f()
  }
}
